Add integration test for role mapping with OIDC IdPs